Css sur Formulaires, création entity... groupe, Descriptions des groupes avec tab groupe.description

--- a/templates/adherents/index.html.twig
+++ b/templates/adherents/index.html.twig
@@ -5,13 +5,12 @@
 
 {% block body %}
 	<div id="adherents">
-
 		<div id="textAdherents">
 			<p id="titreAdherents">Espace adhérents</p>
 			<p id="resumeAdhrents">Chers adhérents, bienvenue dans vôtre espace Norm’And.Prod.
-																				Vous y trouverez toutes les infos dont vous aurez besoins, les règles de l’association,
-																				les comptes rendus de réunions, les projets, numéros de téléphones, mails, ainsi qu’un espace blog pour discuter.
-																				À bientôt
+				Vous y trouverez toutes les infos dont vous aurez besoins, les règles de l’association,
+				les comptes rendus de réunions, les projets, numéros de téléphones, mails, ainsi qu’un espace blog pour discuter.
+				À bientôt
 			</p>
 		</div>
 		<br><br><br>
@@ -22,7 +21,7 @@
 				<div id="blocTresorierAdj">
 					<img class="imgTresorierAdj" src="{{ asset('assets/images/avatarmick.png') }}"><br>
 					<p class="textTresorierAdj">
-						Trésorier adjoint<br>
+						Secrétaire adjoint<br>
 						Benicourt Mickael<br>
 						06 00 00 00 00
 					</p>
@@ -58,7 +57,7 @@
 				<div id="blocSecretaireAdj">
 					<img class="imgSecretaireAdj" src="{{ asset('assets/images/avatarju.png') }}"><br>
 					<p class="textSecretaireAdj">
-						Secrétaire adj<br>
+						Tresorier adj<br>
 						Marie Julien<br>
 						06 00 00 00 00
 					</p>
@@ -69,97 +68,86 @@
 
 		<div id="documents">
 			<p id="titreDocuments">Les documents</p><br>
-			{% for document in documents %}
-			<a href="{{ asset('assets/pdf/' ~ document.uri) }}" target="_blank">
-				<img class="imgPDF" src="{{ asset('assets/images/charte.png')|imagine_filter('pdf') }}">
-			</a>
-
-
-			{% endfor %}
-
-			{# <a href="{{ asset('assets/pdf/charteNAP.pdf') }}" target="_blank">
-				<img class="imgPDF" src="{{ asset('assets/images/charte.png')|imagine_filter('pdf') }}">
-			</a>
-
-			<a href="{{ asset('assets/pdf/statutNAP.pdf') }}" target="_blank">
-				<img class="imgPDF" src="{{ asset('assets/images/statut.png')|imagine_filter('pdf') }}">
-			</a>
-
-			<a href="{{ asset('assets/pdf/NAPpv270419.pdf') }}" target="_blank">
-				<img class="imgPDF" src="{{ asset('assets/images/pv1.png')|imagine_filter('pdf') }}">
-			</a>
-
-			<a href="{{ asset('assets/pdf/bulletinAdhesionNAP.pdf') }}" target="_blank">
-				<img class="imgPDF" src="{{ asset('assets/images/bulletin.png')|imagine_filter('pdf') }}">
-			</a> #}
+			<div id="docPdf">
+				{% for document in documents %}
+					<a href="{{ asset('assets/pdf/' ~ document.uri) }}" target="_blank">
+						<img class="imgPDF" src="{{ asset('assets/images/pdf.png')|imagine_filter('pdf') }}"><br>
+						<p id="pdf">{{ document.name }}</p>
+					</a>
+				{% endfor %}
+			</div>
 		</div>
 		<br>
-		<h2>Ajouter un document</h2>
-		{% block javascripts %}
-		<script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
-		<script>
-			$(document).ready(function () {
-				bsCustomFileInput.init()
-			})
-		</script>
-		{% endblock %}
+		{% if is_granted('ROLE_ADMIN') %}
+			<h2>Ajouter un document</h2>
+			{% block javascripts %}
+				<script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+				<script>
+					$(document).ready(function () {
+					bsCustomFileInput.init()
+					})
+				</script>
+			{% endblock %}
 
-		{{ form_start(uploadForm) }}
+			{{ form_start(uploadForm) }}
 			<div class="form-group col-8 m-auto">
 				<div class="form-control-file">
-				{{ form_widget(uploadForm) }}
+					{{ form_widget(uploadForm) }}
 				</div>
 			</div>
-		{{ form_end(uploadForm) }}
+			{{ form_end(uploadForm) }}
+		{% endif %}
 
 
+		<br><br>
+
+		<div id="exprime">
+			<p id="titreExprime">Exprimez-vous</p>
+
+			<form action="{{ path('adherents') }}">
+				<input class="btn btn-primary" type="submit" value="Rafraichir les messages"/>
+			</form>
 			<br><br>
 
-			<div id="exprime">
-				<p id="titreExprime">Exprimez-vous</p>
-
-				<form action="{{ path('adherents') }}">
-					<input class="btn btn-primary" type="submit" value="Rafraichir les messages"/>
-				</form>
-				{# <input type="button" value="Rafraichir" id="refresh" /> #}
-				<br><br>
-
-				<table class="table table-striped table-light">
-					<thead>
+			<table class="table table-striped table-light col-8 m-auto">
+				<thead>
+					<tr>
+						<th scope="col">Pseudo</th>
+						<th scope="col">Message</th>
+						<th scope="col">Date/Heure</th>
+						{% if is_granted('ROLE_ADMIN') %}
+							<th>Supprimer</th>
+						{% endif %}
+					</tr>
+				</thead>
+				<tbody class="tDialogue">
+					{% for dialogue in dialogues %}
 						<tr>
-							<th scope="col">Pseudo</th>
-							<th scope="col">Message</th>
-							<th scope="col">Date/Heure</th>
+							<td>{{ dialogue.User.username}}</td>
+							<td>{{ dialogue.contenu }}</td>
+							<td>{{ dialogue.createdAt|date('d/m/y H:i') }}</td>
 							{% if is_granted('ROLE_ADMIN') %}
-								<th>Supprimer</th>
+								<td>
+									<a href='{{path('delete_dialogue', {'id':dialogue.id})}}' type="button" class="btn btn-danger">X</a>
+								</td>
 							{% endif %}
 						</tr>
-					</thead>
-					<tbody class="tDialogue">
-						{% for dialogue in dialogues %}
-							<tr>
-								<td>{{ dialogue.User.username}}</td>
-								<td>{{ dialogue.contenu }}</td>
-								<td>{{ dialogue.createdAt|date('d/m/y H:i') }}</td>
-								{% if is_granted('ROLE_ADMIN') %}
-									<td>
-										<a href='{{path('delete_dialogue', {'id':dialogue.id})}}' type="button" class="btn btn-danger">X</a>
-									</td>
-								{% endif %}
-							</tr>
-						{% else %}
-							<tr>
-								<td colspan="6">Aucun enregistrement trouvé</td>
-							</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-				<br>
-				<h2>Nouveau message</h2>
-				{{ form_start(messageForm) }}
-				{{ form(messageForm) }}
-					{{ form_end(messageForm) }}
+					{% else %}
+						<tr>
+							<td colspan="6">Aucun enregistrement trouvé</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+			<br>
+			<h2>Nouveau message</h2>
 
+			{{ form_start(messageForm) }}
+			<div class="form-group col-8 m-auto">
+				{{ form(messageForm) }}
 				</div>
+				{{ form_end(messageForm) }}
+
 			</div>
-		{% endblock %}
+		</div>
+	{% endblock %}
