--- a/templates/includes/menu.html.twig
+++ b/templates/includes/menu.html.twig
@@ -1,7 +1,7 @@
     <div id="menu_principalP">
         <div id="background_menuP">
             <a class="diesiraeP" href="{{path('diesirae')}}" title="DIES IRAE tribute Noir Désir">DIESIRAE</a>
-            <a class="groupesP">groupes</a>
+            <a class="groupesP" href="{{path('groupe')}}" >groupes</a>
             <a class="agendaP" href="{{path('concerts')}}" title="AGENDA">agenda</a>
             <a class="normP" href="{{path ('app_home')}}" title="ACCUEIL">NORM'AND</a>
             <a class="associationP" href="{{path('association')}}" title="ASSOCIATION"> association</a>
