--- a/public/assets/css/adherents.css
+++ b/public/assets/css/adherents.css
@@ -45,8 +45,6 @@
 #blocSecretaireAdj,
 #blocTresorierAdj {
     display: inline-block;
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
     justify-content: space-between;
 }
 
@@ -75,11 +73,18 @@
 
 /** ----------------- PDF ----------------------- **/
 
-.imgPDF {
-    margin: 5px 10px;
+#docPdf {
+    display: flex;
+    justify-content: center;
 }
 
-.table {}
+.imgPDF {
+    margin: 5px 30px;
+}
+
+#pdf:hover {
+    text-decoration: none;
+}
 
 
 /**------------------ HOVER ADHERENTS -----------------**/
@@ -92,8 +97,4 @@
     -webkit-transform: scale(1.3);
     transform: scale(1.1);
     transition-duration: 1s;
-}
-
-.rafraichir:hover {
-    text-decoration: none;
 }
