--- a/templates/entertain_us/index.html.twig
+++ b/templates/entertain_us/index.html.twig
@@ -5,10 +5,14 @@
 {% block body %}
     <img class="imgEntertainus" src="{{ asset('assets/images/entertainus.png')|imagine_filter('logo2') }}"><br><br>
     <div id="textentertainUs">
-        <p class="text-center">
-        Kurt Cobain a inventé le "Grunge". Il a aussi marqué toute une génération, les années 90.<br>
-        Mais la musique de Nirvana ne s'est jamais éteinte, bien au contraire !<br>
-        Entertain Us fait revivre ce groupe mythique...
-        </p>
+        {% for groupe in listeGroupe %}
+			{% if groupe.nomGroupe ==  'Entertain Us (Tribute Nirvana)' %}
+				<p class="text-justify">
+					{{ groupe.description}}
+				</p>
+			{% endif %}
+		{% else %}
+			<p colspan="6">Groupe non trouvé</p>
+		{% endfor %}
     </div>
 {% endblock %}
