--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Utilisateurs NAP</h1>
 
-    <table class="table table-striped table-dark">
+    <table class="table table-striped table-dark col-8 m-auto">
         <thead>
             <tr>
                 <th scope="col">Id</th>
@@ -36,6 +36,7 @@
         {% endfor %}
         </tbody>
     </table>
+    <br>
 
-    <a type="button" class="btn btn-dark btn-lg btn-block" href="{{ path('user_new') }}">Nouveau</a>
+    <a type="button" class="btn btn-success btn-lg col-8 m-auto" href="{{ path('user_new') }}">Nouveau</a>
 {% endblock %}
