--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
     <h1>Nouvel Utilisateur</h1>
-
-    {{ include('user/_form.html.twig') }}
-
-    <a type="button" class="btn btn-warning btn-lg btn-block" href="{{ path('user_index') }}">Retour liste</a>
+    <div class="form-group col-8 m-auto">
+        {{ include('user/_form.html.twig') }}
+    </div>
+    <a type="button" class="btn btn-warning btn-lg col-8 m-auto" href="{{ path('user_index') }}">Retour liste</a>
 {% endblock %}
