--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Fiche de {{ user.username }}</h1>
 
-    <table class="table table-striped table-dark">
+    <table class="table table-striped table-dark col-8 m-auto">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -30,10 +30,10 @@
         </tbody>
     </table>
 
-    <a type="button" class="btn btn-warning btn-lg btn-block" href="{{ path('user_edit', {'id': user.id}) }}">Editer</a>
-    <a type="button" class="btn btn-light btn-lg btn-block" href="{{ path('user_index') }}">retour liste</a>
+    <a type="button" class="btn btn-warning btn-lg col-8 m-auto" href="{{ path('user_edit', {'id': user.id}) }}">Editer</a>
+    <a type="button" class="btn btn-light btn-lg col-8 m-auto" href="{{ path('user_index') }}">retour liste</a>
 
 
 
-        <a type="button" class="btn btn-danger btn-lg btn-block">{{ include('user/_delete_form.html.twig') }}</a>
+        <a type="button" class="btn btn-danger btn-lg col-8 m-auto">{{ include('user/_delete_form.html.twig') }}</a>
 {% endblock %}
