Entity Groupe créé + crud

--- a/templates/groupe/editGroupe.html.twig
+++ b/templates/groupe/editGroupe.html.twig
@@ -12,5 +12,5 @@
 
     <a type="button" class="btn btn-light btn-lg col-8 m-auto" href="{{ path('groupe') }}">Retour</a>
 
-	<a href='{{path('delete_groupe', {'id':groupe.id})}}' type="button" class="btn btn-light btn-lg col-8 m-auto">Supprimer </a>
+	<a href='{{path('delete_groupe', {'id':groupe.id})}}' type="button" class="btn btn-danger btn-lg col-8 m-auto">Supprimer </a>
 {% endblock %}
