Choix d'un groupe lors d'une création de concert

--- a/templates/concert/index.html.twig
+++ b/templates/concert/index.html.twig
@@ -24,7 +24,7 @@
 				<p>
 					{{ concert.date|date('d/m/y')}}
 					{{ concert.nom }}
-					{{ concert.band }}
+					{{ concert.band.nomGroupe }}
 					{{ concert.heure|date('H:i') }}
 				</p>
 			{% endif %}
@@ -41,7 +41,7 @@
 				<p>
 					{{ concert.date|date('d/m/y')}}
 					{{ concert.nom }}
-					{{ concert.band }}
+					{{ concert.band.nomGroupe }}
 				</p>
 			{% endif %}
 		{% else %}
