--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 			<div class="alert alert-success" role="alert">{{ message }}</div>
 		{% endfor %}
 
-		{% for flashError in app.flashes('error') %}
+		{% for message in app.flashes('error') %}
 			<div class="alert alert-warning" role="alert">{{ message }}</div>
 		{% endfor %}
 
