--- a/templates/groupe/bismuth.html.twig
+++ b/templates/groupe/bismuth.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% import 'groupe/afficherDates.html.twig' as afficherDate %}
+
 {% block title %}NAP-BISMUTH{% endblock %}
 
 {% block body %}
@@ -17,4 +19,8 @@
         <source src="{{ asset('assets/audio/resistance.mp3') }}">
         </audio>
     </div>
+    <br><br>
+{{afficherDate.mainLoop(groupe.concerts)}}
+
+
 {% endblock %}
