--- a/templates/groupe/diesirae.html.twig
+++ b/templates/groupe/diesirae.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% import 'groupe/afficherDates.html.twig' as afficherDate %}
+
 {% block title %}NAP-Dies Irae{% endblock %}
 
 {% block body %}
@@ -18,4 +20,7 @@
         <iframe width="700" height="400" src="https://www.youtube.com/embed/q7PJkz69SLk" frameborder="0" 
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+    <br><br>
+{{afficherDate.mainLoop(groupe.concerts)}}
+
 {% endblock %}
