--- a/templates/groupe/djoh.html.twig
+++ b/templates/groupe/djoh.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% import 'groupe/afficherDates.html.twig' as afficherDate %}
+
 {% block title %}NAP-DJOH{% endblock %}
 
 {% block body %}
@@ -9,4 +11,8 @@
 			{{ groupe.description}}
 		</p>
     </div>
+
+	<br>
+{{afficherDate.mainLoop(groupe.concerts)}}
+
 {% endblock %}
