--- a/templates/groupe/geminii.html.twig
+++ b/templates/groupe/geminii.html.twig
@@ -1,17 +1,22 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}NAP-Geminii{% endblock %}
+{% import 'groupe/afficherDates.html.twig' as afficherDate %}
+{% block title %}NAP-Geminii
+{% endblock %}
 
 {% block body %}
-    <img class="imgGeminii" src="{{ asset('assets/images/geminii.png')|imagine_filter('logo') }}"><br><br>
-    <div id="textGeminii">
-        <p class="text-justify">
-            {{ groupe.description}}
-        </p>
-    </div>
+	{% import 'groupe/afficherDates.html.twig' as afficherDate %}
 
-    <div>
-    <iframe width="700" height="400" src="https://www.youtube.com/embed/9cUyfXflCXo" frameborder="0" 
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+	<img class="imgGeminii" src="{{ asset('assets/images/geminii.png')|imagine_filter('logo') }}"><br><br>
+	<div id="textGeminii">
+		<p class="text-justify">
+			{{ groupe.description}}
+		</p>
+	</div>
+
+	<div>
+		<iframe width="700" height="400" src="https://www.youtube.com/embed/9cUyfXflCXo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+
+	{{afficherDate.mainLoop(groupe.concerts)}}L
 {% endblock %}
+
