--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,21 +8,21 @@
 {% block body %}
 	<div id="menu_principal">
 		<div id="background_menu">
-			<a class="diesirae" href="{{path('diesirae')}}" title="DIES IRAE tribute Noir Désir">DIESIRAE</a>
+			<a class="diesirae" href="{{path('app_groupe_groupviewindex', {'tag': 'diesirae' })}}" title="DIES IRAE tribute Noir Désir">DIESIRAE</a>
 			<a class="groupes" href="{{path('groupe')}}">groupes</a>
 			<a class="agenda" href="{{path('concerts')}}" title="AGENDA">agenda</a>
 			<a class="norm" href="{{path ('app_home')}}" title="ACCUEIL">NORM'AND</a>
 			<a class="association" href="{{path('association')}}" title="ASSOCIATION">association</a>
-			<a class="bismuth" href="{{path('bismuth')}}" title="BISMUTH">BISMUTH</a>
+			<a class="bismuth" href="{{path('app_groupe_groupviewindex', {'tag': 'bismuth' })}}" title="BISMUTH">BISMUTH</a>
 			<a class="contact" href="{{path ('contact')}}" title="contact">contact</a>
 			<a class="connexion" href="{{path ('app_login')}}" title="Connexion">Connexion</a>
-			<a class="enter" href="{{ path ('entertainus') }}" title="Entertain Us">Entertain Us</a>
+			<a class="enter"  href="{{path('app_groupe_groupviewindex', {'tag': 'entertainus' })}}" title="Entertain Us">Entertain Us</a>
 			<a class="concerts">concerts</a>
-			<a class="serial" href="{{ path('serialclockkiller') }}" title="SERIAL CLOCK KILLER">SERIAL CLOCK KILLER</a>
+			<a class="serial" href="{{path('app_groupe_groupviewindex', {'tag': 'serialclockkiller' })}}" title="SERIAL CLOCK KILLER">SERIAL CLOCK KILLER</a>
 			<a class="prod" href="{{path ('app_home')}}" title="ACCUEIL">.PROD</a>
 			<a class="evenements">évènements</a>
-			<a class="djoh" href="{{ path('djoh') }}" title="DJOH">DJOH</a>
-			<a class="geminii" href="{{ path ('geminii') }}" title="GEMINII">GEMINii</a>
+			<a class="djoh" href="{{path('app_groupe_groupviewindex', {'tag': 'djoh' })}}" title="DJOH">DJOH</a>
+			<a class="geminii" href="{{path('app_groupe_groupviewindex', {'tag': 'geminii' })}}" title="GEMINII">GEMINii</a>
 			<a class="rock">rock</a>
 			<a class="espaceNA"  title="ESPACE ADHERENTS">espace adhérents</a>
 			{% if is_granted('ROLE_USER') %}
